# Pizzeria-backend

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yaml
crates/api-response/: Cargo.toml
crates/api-response/src/: lib.rs
crates/jwt/: Cargo.toml
crates/jwt/src/: auth_models.rs  lib.rs  models.rs  secret_key.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
examples/: authorize.hurl  create_user.hurl  get_user_by_email.hurl  handler_404.hurl  update_user.hurl
examples_hurl/: get_user_by_username.hurl
migrations/: 20240321181200_init.down.sql  20240321181200_init.up.sql
queries/pizza/: delete_pizza.sql  insert_pizza.sql  patch_update_pizza.sql  put_update_pizza.sql  select_pizza.sql  select_pizzas.sql
queries/user/: create_user.sql  delete_user.sql  patch_update_user.sql  put_update_user.sql  select_user_by_email.sql  select_user_by_username.sql  update_user.sql
src/: auth.rs  lib.rs  main.rs  models.rs  user_query.rs
src/crud/: mod.rs  pizza.rs  user.rs
src/endpoints/: auth.rs  mod.rs  pizza.rs  user.rs
src/middleware/: jwt.rs
src/models/: mod.rs  pizza.rs  user.rs
src/queries/: mod.rs  pizza.rs  user.rs
src/requests/: mod.rs  user.rs
utils/: Cargo.toml
utils/src/: api_response.rs  encryption.rs  lib.rs
utils/src/jwt/: auth_body.rs  auth_payload.rs  mod.rs  secret_key.rs
utils/src/rate_limiting/: custom_header.rs  custom_header_extractor.rs  mod.rs
