[workspace]
resolver = "2"
members = [
    "crates/api-response",
    "crates/jwt",
    "crates/utils"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.13.2", features = ["v4", "serde"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.39"

api-response = { path = "crates/api-response" }
utils = { path = "crates/utils" }
jwt = { path = "crates/jwt" }

[package]
name = "pizzeria-backend"
edition.workspace = true

[dependencies]
axum.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true
api-response.workspace = true
utils.workspace = true
jwt.workspace = true
jsonwebtoken.workspace = true

[profile.release]
opt-level = 3
lto = "fat"
debug = false
strip = true
panic = "abort"
