[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = "0.4.37"
bcrypt = "0.15.1"
dotenv = "0.15"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
jsonwebtoken = "9.3.0"
once_cell = "1.8"

